# HOTS

./: .gitignore  .gitmodules  Beast.cpp  Beast.h  BuildLinux.sh  CMakeLists.txt  Card.cpp  Card.h  HOTS.cpp  HOTS4thewin.sln  README.txt  sfgj
Board/: Board.cpp  Board.h  RegulatedBoard.cpp  RegulatedBoard.h  RegulatedBord.cpp  RegulatedBord.h  StackBoard.cpp  StackBoard.h  StackedBoard.cpp  StackedBoard.h  iBoard.h  iBoardFactory.h
Card/: Beast.cpp  Beast.h  Capacity.cpp  Capacity.h  Card.cpp  Card.h  Cost.cpp  Cost.h  Creature.cpp  Creature.h  Effect.cpp  Effect.h  Hero.cpp  Hero.h  Player.cpp  Player.h  Spell.cpp  Spell.h  iBeast.h  iCapacity.h  iCard.h  iCreature.h  iHero.h
Effect/: Cost.cpp  Cost.h  Effect.cpp  Effect.h  EffectCapacity.h  EffectCost.cpp  EffectCost.h  EffectLife.cpp  EffectLife.h  EffectStrength.cpp  EffectStrength.h  Life.cpp  Life.h  Strength.cpp  Strength.h  iEffect.h
GameEngine/: GameEngine.cpp  GameEngine.h  GameSimulator.cpp  GameSimulator.h  correspondance.cpp  correspondance.h  gameengine.cpp  gameengine.h  gamesimulator.cpp  gamesimulator.h  iGameSimulator.h  iSimulatorFactory.h  igamesimulator.h  igamesolver.h  isimulatorfactory.h  match.h
HOTS4thewin/: Agent.h  Artefact.cpp  Artefact.h  Attribut.cpp  Attribut.h  Bete.cpp  Bete.h  Board.cpp  Board.h  Carte.cpp  Carte.h  EasyKill.cpp  EasyKill.h  GGC.cpp  GGC.h  HOTS4thewin.cpp  HOTS4thewin.vcxproj  HOTS4thewin.vcxproj.filters  Neurone.cpp  Neurone.h  Passif.cpp  Passif.h  PenseBeteIA.txt  Personnage.cpp  Personnage.h  ReadMe.txt  Skynet.cpp  Skynet.h  Sort.cpp  Sort.h  Threats.cpp  Threats.h  ihc.cpp  ihc.h  listeObj.h  mecaJeu.cpp  mecaJeu.h  reseau.cpp  reseau.h  sond.cpp  (+5 more)
HOTSBase/: HOTSBase.modelproj  UMLClass_Board.classdiagram  UMLClass_Board.classdiagram.layout  UMLClass_CardnCo.classdiagram  UMLClass_CardnCo.classdiagram.layout  UMLClass_Player.classdiagram  UMLClass_Player.classdiagram.layout
HOTSBase/ModelDefinition/: HOTSBase.uml  Package_0204.uml  Package_0207.uml  Package_0209.uml  Package_0215.uml
HOTS_Clean/Card/: Beast.cpp  Beast.h  Capacity.h  Card.cpp  Card.h
HOTS_Clean/Effect/: Cost.h  Effect.cpp  Effect.h  EffectCost.h  EffectStrength.cpp  Life.cpp  Life.h  Strength.cpp
IA/: Agent.cpp  Agent.h  Hal.cpp  Hal.h  IAStruct.inc  NeurMono.cpp  NeurMono.h  NeuralNetwork.cpp  NeuralNetwork.h  Neurone.cpp  Neurone.h  StupidAgent.cpp  StupidAgent.h  testIA.cpp
IHM/: iboard.h  icard.h  iihm.h
IHM/PolycodeGUI/: IHM.cpp  IHM.h  board.cpp  board.h  card.cpp  card.h
Network/: HelloPolycodeApp.cpp  HelloPolycodeApp.h  gameclient.cpp  gameclient.h  main.cpp  patron.cpp
Release/Resources/: .directory
Test/: README.txt
Test/Board/: Board_Test.cpp  Board_Test.h  CMakeCache.txt  CMakeLists.txt  Card.cpp  Card.h  Makefile  a.out  board_test.cpp  cmake_install.cmake
Test/Card/: CMakeLists.txt  Card_Test.cpp  Card_Test.h
Test/CreateDeck/: CMakeLists.txt  CreateDeck_Test.cpp  CreateDeck_Test.h
Test/Effect/: CMakeLists.txt  Effect_Test.cpp  Effect_Test.h
Test/GameEngine/: CMakeLists.txt  GameEngine_Test.cpp  GameEngine_Test.h
utils/: Card types  CreateDeck.cpp  CreateDeck.h  Effect Affinities  Effect types  creatdeck.cpp  creatdeck.h  effectType.inc  file_manager.cpp  file_manager.h  requestType.inc  tool.inc  usefulStruc.inc
utils/Create/: CreateCard.cpp  CreateCard.h  CreateDeck.cpp  CreateDeck.h
